--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -249,7 +249,7 @@ body.plantshare {
                     }
 
                     .display {
-                        .group-list {
+                        .group-list, .coords-list {
                             float: left;
                         }
                         .edit-link {
